After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 130791 - this .xls file produced by gnumeric cannot be opened by XL
this .xls file produced by gnumeric cannot be opened by XL
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: import/export MS Excel (tm)
1.2.x
Other All
: Immediate blocker
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-01-07 17:19 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The .xls file that cannot be opened by XL (6.50 KB, application/msexcel)
2004-01-07 17:20 UTC, Frederic Parrenin
  Details
This file, almost identical to the previous one, can be opened. Note however that the hex2dec function is not properly imported into XL. (should be hexdec in XL) (6.50 KB, application/msexcel)
2004-01-07 17:21 UTC, Frederic Parrenin
  Details
one liner to fix xls export of plugin functions. (1.17 KB, patch)
2004-01-13 02:31 UTC, Jody Goldberg
none Details | Review

Description Frederic Parrenin 2004-01-07 17:19:26 UTC
Another one...
It contains the hex2dec function, I don't know if it is related.
The error in XL is the same than for bug 128524.
Comment 1 Frederic Parrenin 2004-01-07 17:20:18 UTC
Created attachment 23074 [details]
The .xls file that cannot be opened by XL
Comment 2 Frederic Parrenin 2004-01-07 17:21:54 UTC
Created attachment 23076 [details]
This file, almost identical to the previous one, can be opened. Note however that the hex2dec function is not properly imported into XL. (should be hexdec in XL)
Comment 3 Jody Goldberg 2004-01-10 02:53:21 UTC
hmm, gnumeric has problems opening too.

It relates to the use of functions that are addins in XL.
I could have sworn I had tested this dozens of times.

This  must be fixed before 1.2.5
Comment 4 Jody Goldberg 2004-01-13 02:31:51 UTC
Created attachment 23294 [details] [review]
one liner to fix xls export of plugin functions.
Comment 5 Jody Goldberg 2004-01-13 02:32:17 UTC
Stupid cut-n-paste error add in 1.2.2.
Fixed in both branches.
Comment 6 Frederic Parrenin 2004-01-13 09:02:40 UTC
Thanks for the fix !