http://bugzilla.gnome.org/show_bug.cgi?id=130791 fix cut-n-paste-o in

2004-01-12  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=130791
	* ms-formula-write.c (excel_write_prep_expr) : fix cut-n-paste-o in
	  change for 1.2.2 that added macros and broke plugin functions.